# 701

./: Cargo.toml  multi_threaded_metrics  readme.md  run_multi_experiments_other.sh  run_single_experiments_other.sh
binaries/osx/: all_in_one  client  generator
other_data/: 10000_dna  generate_data.sh
src/: run_experiments.sh  run_multi_experiments.sh
src/benches/: my_benchmark.rs
src/common/: lib.rs  search.rs  suffix_array.rs  types.rs
