[package]
name = "bwt"
version = "0.1.0"
authors = ["Zachary Hanif <zachary.hanif@capitalone.com>"]
edition = "2018"

[[bin]]
name = "generator"
path = "src/bin/main.rs"

[[bin]]
name = "client"
path = "src/bin/search_client.rs"

[[bin]]
name = "all_in_one"
path = "src/bin/all_in_one.rs"

[[bin]]
name = "bwt_rosalind"
path = "src/bin/bwt_rosalind.rs"

[lib]
name = "common"
path = "src/common/lib.rs"

[dependencies]
bincode = "1.1.3"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.0.3"
bio = "*"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "my_benchmark"
path = "src/benches/my_benchmark.rs"
harness = false

[profile.bench]
opt-level = 3
debug = false
lto = true
debug-assertions = false

[profile.release]
debug = true